Fixed sparkles to better align with title

--- a/style.css
+++ b/style.css
@@ -25,14 +25,18 @@ h1 {
     font-style: normal;
     font-weight: 900;
     line-height: normal;
-    margin: 0;
+    margin: 0 auto;
+    position: relative;
+    width: fit-content;
 }
 
 h2 {
     color: #F4F0EE;
     text-align: center;
     font-weight: 100;
-    margin: 10px 0 0 0;
+    margin: 10px auto;
+    position: relative;
+    width: fit-content;
 }
 
 p {
@@ -109,8 +113,10 @@ main {
     flex-shrink: 0;
     box-sizing: border-box;
     align-self: flex-end;
-    z-index: 1;
-    margin-left: 400px;
+    z-index: -1;
+    position: absolute;
+    top: -45px;
+    left: -120px;
 }
 
 
@@ -122,8 +128,10 @@ main {
     stroke-width: 3px;
     stroke: #F4F0EE;
     align-self: flex-end;
-    margin-right: 500px;
-    z-index: 1;
+    z-index: -1;
+    position: absolute;
+    right: -120px;
+    bottom: -10px;
 }
 
 /*--Content--*/
